--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "src/index.js",
-  "homepage": "https://dark-manx.github.io/goit-js-hw-10",
+  "homepage": "https://dark-manx.github.io/FreySoft-test",
   "scripts": {
     "dev": "parcel src/*.html --open -p 7777",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Dark-ManX/goit-js-hw-10.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Serhii",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Dark-ManX/goit-js-hw-10/issues"
